기능추가:재고량수정기능 추가